--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: upskill
+name: flutter_clean_architecture
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  logger: ^2.4.0
+  responsive_framework: ^1.5.1
+  pretty_dio_logger: ^1.4.0
+  dio: ^5.7.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
