add api calls and dto

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cached_network_image: ^3.4.1
   freezed: ^2.5.7
   json_annotation: ^4.9.0
+  flutter_bloc: ^8.1.6
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_test:
