--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,22 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
   cupertino_icons: ^1.0.8
-  logger: ^2.4.0
-  responsive_framework: ^1.5.1
-  pretty_dio_logger: ^1.4.0
+  flutter_bloc: ^8.1.6
   dio: ^5.7.0
-  cached_network_image: ^3.4.1
+  pretty_dio_logger: ^1.4.0
+  get_it: ^8.0.0
+  injectable: ^2.5.0
+  logger: ^2.4.0
   freezed: ^2.5.7
+  go_router: ^14.3.0
+  injectable_generator: ^2.6.2
+  flutter_dotenv: ^5.1.0
   json_annotation: ^4.9.0
+  freezed_annotation: ^2.4.4
+  cached_network_image: ^3.4.1
+  responsive_framework: ^1.5.1
 
 dev_dependencies:
   flutter_test:
