--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,18 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  logger: ^2.4.0
-  responsive_framework: ^1.5.1
-  pretty_dio_logger: ^1.4.0
-  dio: ^5.7.0
-  cached_network_image: ^3.4.1
-  freezed: ^2.5.7
-  json_annotation: ^4.9.0
   flutter_bloc: ^8.1.6
-  freezed_annotation: ^2.4.4
+  dio: ^5.7.0
+  pretty_dio_logger: ^1.4.0
   get_it: ^8.0.0
   injectable: ^2.5.0
+  logger: ^2.4.0
+  freezed: ^2.5.7
   injectable_generator: ^2.6.2
+  flutter_dotenv: ^5.1.0
+  json_annotation: ^4.9.0
+  freezed_annotation: ^2.4.4
+  cached_network_image: ^3.4.1
+  responsive_framework: ^1.5.1
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +59,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,10 +68,13 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
